[package]
name = "knurdy"
version = "0.2.0"
edition = "2021"

license = "MIT"
description = "Minimal, opinionated KDL deserialization with Serde"
repository = "https://github.com/gamma-delta/knurdy"
keywords = ["serde", "kdl"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
base64 = "0.13.0"
heck = "0.4.0"
paste = "1.0.9"
serde = { version = "1.0.144", features = ["derive"] }
smol_str = "0.1.23"
thiserror = "1.0.34"
kdl = "4.5.0"
